--- a/lecture_notes/04_1_bst.ipynb
+++ b/lecture_notes/04_1_bst.ipynb
@@ -8,7 +8,10 @@
    },
    "source": [
     "# Двоичное дерево\n",
-    "Binary Tree"
+    "Binary Tree\n",
+    "\n",
+    "Литература:\n",
+    "* Cormen et al, *Introduction to Algorithms*, Chapter 12"
    ]
   },
   {
