Исправить опечатку в задании

--- a/problems/01/problems.tex
+++ b/problems/01/problems.tex
@@ -59,7 +59,7 @@ BSc, компьютерная лингвистика, НИУ ВШЭ\\
   for e in A:
     r  = r * e\end{verbatim}%
   \item\,[1] Приведите пример функции, для которой не существует асимптотической оценки через $\Theta$.
-  \item\,[1] Пользуясь только определением $\Theta$ (т.е. не вычисляя предел) докажите, что при $a^d > 0$ и $d=\const$ выполняется
+  \item\,[1] Пользуясь только определением $\Theta$ (т.е. не вычисляя предел) докажите, что при $a_d > 0$ и $d=\const$ выполняется
   $$
   \sum_{i=0}^{d}a_i n^i = \Theta(n^d)
   $$
