--- a/problems/02/problems.tex
+++ b/problems/02/problems.tex
@@ -41,7 +41,7 @@ BSc, компьютерная лингвистика, НИУ ВШЭ\\
 \end{center}
 
 \begin{enumerate}
-  \item\,[{\tt vector\_copy}] Рассмотрим динамический массив, размер которого увеличивается в $\alpha$ раз при добавлении очередного элемента в целиком заполненный массив. Для $\alpha=2$ посчитайте, сколько операций копирования совершается при добавлении $n$ элементов в изначально пустой массив.
+  \item\,[{\tt vector\_copy}] Рассмотрим динамический массив, размер которого увеличивается в $\alpha$ раз при добавлении очередного элемента в целиком заполненный массив. Для $\alpha=2$ как можно более точно оцените сверху количество операций копирования, совершаемое при добавлении $n$ элементов в изначально пустой массив. Оценка должна быть в терминах $n$.
 
   {\it (Одной операцией считается копирование одного элемента массива. В задаче предполагается явный подсчёт, без использования <<метода бухучёта>> и асимптотических оценок.)}
 
