lecture notes update

--- a/lecture_notes/02.tex
+++ b/lecture_notes/02.tex
@@ -36,8 +36,6 @@ $$
 
 \subsection*{Dynamic Arrays}
 
-\subsection*{Search by Value}
-
 \section{Stacks}
 
 \section{Queues}
@@ -110,5 +108,12 @@ $$
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Hash Tables}
+\section{Sets and Dictionaries}
 
+До этого момента мы рассматривали структуры данных с точки зрения хранения последовательности элементов, а также их добавления и удаления. Теперь к этим операциям добавится {\em поиск}.
+
+Рассмотрим множество $K$, элементы которого будем называть {\em ключами}. На множестве ключей определена операция сравнения. Предположим для простоты, что она требует времени $O(1)$ (что, например, не выполняется для строк произвольной длины).
+
+Необходимо представить $K$ в виде структуры данных, в которой для произвольного ключа $k$ можно эффективно проверить его принадлежность к $K$. Говорят, что такая структура реализует интерфейс {\em множества}.
+
+Более общая задача возникает, если с каждым ключом из $K$ сопоставлены данные -- элемент из множества значений $V$.  Тогда по заданному $k$ необходимо эффективно найти соответствующий ему элемент $v \in V$. Такая структура данных реализует интерфейс {\em словаря}.
